@@ -86,11 +86,17 @@ class DMSParser(TopologyReaderBase):
       Segment:
         - Segids
 
+    .. note::
+
+        By default, atomtypes will be guessed on Universe creation.
+        This may change in release 3.0.
+        See :ref:`Guessers` for more information.
+
     .. _DESRES: http://www.deshawresearch.com
     .. _Desmond: http://www.deshawresearch.com/resources_desmond.html
     .. _DMS: http://www.deshawresearch.com/Desmond_Users_Guide-0.7.pdf
     .. versionchanged:: 2.8.0
-        Removed type and mass guessing (attributes guessing takes place now
+        Removed type guessing (attributes guessing takes place now
         through universe.guess_TopologyAttrs() API).
 
     """
