@@ -78,6 +78,12 @@ class ExtendedPDBParser(PDBParser.PDBParser):
      - bonds
      - formalcharges
 
+   .. note::
+
+      By default, atomtypes and masses will be guessed on Universe creation.
+      This may change in release 3.0.
+      See :ref:`Guessers` for more information.
+
 
     See Also
     --------
