@@ -73,6 +73,13 @@ class GMSParser(TopologyReaderBase):
      - names
      - atomic charges
 
+
+    .. note::
+
+        By default, atomtypes and masses will be guessed on Universe creation.
+        This may change in release 3.0.
+        See :ref:`Guessers` for more information.
+
     .. versionadded:: 0.9.1
     .. versionchanged:: 2.8.0
         Removed type and mass guessing (attributes guessing takes place now
