@@ -64,6 +64,12 @@ Segments:
  - segid
  - model
 
+ .. note::
+
+    By default, masses will be guessed on Universe creation.
+    This may change in release 3.0.
+    See :ref:`Guessers` for more information.
+
 Classes
 -------
 
