@@ -1,18 +1,29 @@
 .. Contains the formatted docstrings from the guesser modules located in 'mdanalysis/package/MDAnalysis/guesser'
 
+.. _Guessers:
+
 **************************
 Guesser modules
 **************************
-This module contains the context-aware guessers, which are used by the :meth:`~MDAnalysis.core.Universe.Universe.guess_TopologyAttrs` API. Context-aware guessers' main purpose
+This module contains the context-aware guessers, which are used by the :meth:`~MDAnalysis.core.universe.Universe.guess_TopologyAttrs` API. Context-aware guessers' main purpose
 is to be tailored guesser classes that target specific file format or force field (eg. PDB file format, or Martini forcefield).
-Having such guessers makes attribute guessing more accurate and reliable than having generic guessing methods that doesn't fit all topologies.
+Having such guessers makes attribute guessing more accurate and reliable than having generic guessing methods that don't fit all scenarios.
 
 Example uses of guessers
 ------------------------
 
+Default behavior
+~~~~~~~~~~~~~~~~
+
+By default, MDAnalysis will guess the "mass" and "type" (atom type) attributes for all particles in the Universe
+using the :class:`~MDAnalysis.guesser.default_guesser.DefaultGuesser` at the time of Universe creation,
+if they are not read from the input file.
+Please see the :class:`~MDAnalysis.guesser.default_guesser.DefaultGuesser` for more information.
+
+
+
 Guessing using :meth:`~MDAnalysis.core.universe.Universe.guess_TopologyAttrs` API
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
 
 Guessing can be done through the Universe's :meth:`~MDAnalysis.core.universe.Universe.guess_TopologyAttrs` as following::
 
@@ -24,12 +35,12 @@ Guessing can be done through the Universe's :meth:`~MDAnalysis.core.universe.Uni
   u.guess_TopologyAttrs(to_guess=['elements'])
   print(u.atoms.elements) # print ['N' 'H' 'H' ... 'NA' 'NA' 'NA']
 
-In the above example, we passed ``elements`` as the attribute we want to guess, and
+In the above example, we passed ``elements`` as the attribute we want to guess
 :meth:`~MDAnalysis.core.universe.Universe.guess_TopologyAttrs` guess then add it as a topology
 attribute to the ``AtomGroup`` of the universe.
 
-If the attribute already exist in the universe, passing the attribute of interest to the ``to_guess`` parameter will only fill the empty values of the attribute if any exists.
-To override all the attribute values, you can pass the attribute to the ``force_guess`` parameter instead of the to_guess one as following::
+If the attribute already exists in the universe, passing the attribute of interest to the ``to_guess`` parameter will only fill the empty values of the attribute if any exists.
+To override all the attribute values, you can pass the attribute to the ``force_guess`` parameter instead of ``to_guess`` as following::
 
    import MDAnalysis as mda
    from MDAnalysisTests.datafiles import PRM12
@@ -38,9 +49,14 @@ To override all the attribute values, you can pass the attribute to the ``force_
 
    u.guess_TopologyAttrs(force_guess=['types']) # types ['H', 'O', ..]
 
-N.B.: If you didn't pass any ``context`` to the API, it will use the :class:`~MDAnalysis.guesser.default_guesser.DefaultGuesser`
 
-.. rubric:: available guessers
+.. note::
+   The default ``context`` will use the :class:`~MDAnalysis.guesser.default_guesser.DefaultGuesser`
+
+
+
+
+.. rubric:: Available guessers
 .. toctree::
    :maxdepth: 1
 
@@ -48,7 +64,7 @@ N.B.: If you didn't pass any ``context`` to the API, it will use the :class:`~MD
    guesser_modules/default_guesser
 
 
-.. rubric:: guesser core modules
+.. rubric:: Guesser core modules
 
 The remaining pages are primarily of interest to developers as they
 contain functions and classes that are used in the implementation of
